--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@types/jest": "^25.2.1",
     "classnames": "^2.2.6",
     "gatsby": "^2.21.0",
     "gatsby-image": "^2.4.0",
@@ -26,8 +27,16 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
+    "babel-jest": "^25.5.1",
+    "babel-preset-gatsby": "^0.4.0",
     "eslint": "^6.8.0",
+    "gatsby-plugin-tslint": "^0.0.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^25.5.4",
     "prettier": "2.0.5",
+    "react-test-renderer": "^16.13.1",
+    "tslint": "^6.1.2",
+    "tslint-loader": "^3.5.4",
     "typescript": "^3.8.3"
   },
   "keywords": [
@@ -41,7 +50,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
