--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "babel-jest": "^25.5.1",
     "babel-preset-gatsby": "^0.4.0",
     "eslint": "^6.8.0",
-    "gatsby-plugin-tslint": "^0.0.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.5.4",
     "prettier": "2.0.5",
@@ -47,7 +46,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "npm run develop",
+    "start": "yarn develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "jest"
